# yolov8_ros2

./: .gitignore  README.md
object_detection/: CMakeLists.txt  README.md  package.xml
object_detection/launch/: ip_camera_stream.launch.py  yolov8_detection.launch.py  yolov8_ip_camera.launch.py  yolov8_realsense.launch.py
object_detection/scripts/: yolov8_detection.py  yolov8_ip_camera.py  yolov8_realsense.py
object_detection/src/: ip_camera_publisher.cpp
object_detection_interfaces/: CMakeLists.txt  README.md  package.xml
object_detection_interfaces/msg/: DetectionResult.msg  ObjectDetection.msg
